@@ -1,3 +1,4 @@
+2/27/11 #2756, replaced validateTree() with validate()
 Converted to use SimpleObservable.getObserverList instead of Array version
 Removed unused override, no functional change
 Switched to use PhetTitledBorder, see #2477
